<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/container">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/cover_store"
        android:id="@+id/imageView"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle.Title.Bold"
        android:textColor="@color/textDark"
        android:text="@string/welcome_to_green_fashion"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:id="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/auth_container"/>

    <android.support.v7.widget.CardView
        android:id="@+id/auth_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/textView5">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextStyle.Heading.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textDark"
                android:layout_gravity="center"
                android:text="@string/sign_in"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/textView4"/>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_45"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@drawable/radius_start"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:src="@drawable/ic_email"
                    android:id="@+id/email_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <EditText
                    android:id="@+id/email"
                    style="@style/TextStyle.Comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:layout_constraintStart_toEndOf="@+id/email_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/email_address"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:maxLines="1"
                    app:layout_constraintTop_toTopOf="@+id/email_image"
                    app:layout_constraintBottom_toBottomOf="@+id/email_image"/>

            </android.support.constraint.ConstraintLayout>


            <android.support.constraint.ConstraintLayout
                android:id="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_45"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/email_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <ImageView android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@drawable/radius_start"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:src="@drawable/ic_lock"
                    android:id="@+id/lock"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <EditText
                    android:id="@+id/password"
                    style="@style/TextStyle.Comment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:layout_constraintStart_toEndOf="@+id/lock"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/password"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:maxLines="1"
                    app:layout_constraintTop_toTopOf="@+id/lock"
                    app:layout_constraintBottom_toBottomOf="@+id/lock"/>

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/sign_in"
                android:layout_width="120dp"
                android:layout_height="22dp"
                android:textColor="@android:color/white"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:background="@drawable/radius_25_accent"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/password_container"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <TextView
        style="@style/TextStyle.Title.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/textDark"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/auth_container"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:id="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/facebook"/>

    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_facebook"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:id="@+id/facebook"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/google"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"/>

    <ImageView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:id="@+id/google"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/facebook"
        app:layout_constraintBottom_toBottomOf="@+id/facebook"/>

    <TextView
        style="@style/TextStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:textColor="@color/textLight"
        android:text="@string/don_t_have_an_account"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/facebook"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:id="@+id/textView6"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toStartOf="@+id/sign_up"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="80dp"/>

    <TextView
        style="@style/TextStyle.Title.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textDark"
        android:text="@string/sign_up"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/sign_up"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"/>
</android.support.constraint.ConstraintLayout>